[project]
name = "sungrow-isolarcloud"
version = "0.5.0"
authors = [
  { name="Tore Green", email="bugjam@e-dreams.dk" },
  { name="KRoperUK" },
]
description = "A library to interact with Sungrow's iSolarCloud API (KRoperUK fork with battery, EV charger and dispatch extensions)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
]
license = { text = "MIT" }
dynamic = [ 
    "dependencies",
    "optional-dependencies"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/KRoperUK/pysolarcloud"
Issues = "https://github.com/KRoperUK/pysolarcloud/issues"