[project]
name = "sungrow-isolarcloud"
version = "0.10.4"
authors = [
  { name="Tore Green", email="bugjam@e-dreams.dk" },
  { name="KRoperUK" },
]
description = "A library to interact with Sungrow's iSolarCloud API (KRoperUK fork with battery, EV charger and dispatch extensions)"
readme = "README.md"
# The code relies on 3.12 Enum semantics (`value in EnumClass` membership tests),
# and the only consumer (Home Assistant) requires 3.13, so 3.12 is the floor.
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
]
license = { text = "MIT" }
dynamic = [ 
    "dependencies",
    "optional-dependencies"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/KRoperUK/pysolarcloud"
Issues = "https://github.com/KRoperUK/pysolarcloud/issues"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/pysolarcloud"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.coverage.run]
source = ["src/pysolarcloud"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Coverage floor for the safety-critical library (token rotation, encode_parameter
# bounds, typed-exception mapping). Currently ~99%; 95 leaves headroom without being
# brittle. Enforced by pytest-cov in CI (#38).
fail_under = 95